--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,8 +20,8 @@ main {
   margin-top: 2%;
   width: 13rem;
   position: fixed;
-  top: 10%;
-  right: 2%;
+  top: 15%;
+  left: 2%;
   z-index: 2;
 }
 .priceCard:hover {
