front end work on cart plus start of backend , using redux for cart managment, add to cart functionallity from product page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,30 +29,34 @@ main {
 }
 /*see YouTubePlayer.js ////////////////////*/
 .youtube-player {
+  background-color: red;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
 .youtube-player .handle {
-  position: absolute;
+  /* position: absolute;
   bottom: -24%;
-  right: 96%;
-
+  right: 96%; */
+  display: 'flex';
+  align-items: 'flex-start';
   color: rgb(7, 7, 7);
   opacity: 0.85;
-
   font-size: 1.5rem;
   cursor: move;
 }
 
 .youtube-player .expand {
-  position: absolute;
-  bottom: -24%;
-  left: 96%;
-  font-size: 1.5rem;
+  /* position: absolute;
+  bottom: -1.5rem;
+  left: 22rem; */
+  text-align: right;
+  font-size: 20px;
+  z-index: -1;
+  background-color: greenyellow;
+
   color: rgb(7, 7, 7);
-  opacity: 0.85;
-  cursor: pointer;
+  opacity: 1;
 }
