authentication authorization both front and back end login, sign up forms ,start of backend user profile screen

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,14 @@ main {
   margin-top: 5rem;
 }
 
+.navdrop {
+  background-color: transparent;
+  font-size: medium;
+}
+.navdrop:hover {
+  background-color: #00b1ff;
+}
+
 .zoom {
   transition: transform 0.2s; /* Animation */
 
