--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -82,3 +82,17 @@ td {
   color: rgb(7, 7, 7);
   opacity: 1;
 }
+
+#image-file,
+#interfaceImage-file,
+#poster-file,
+#compatibility-file:hover {
+  cursor: pointer;
+}
+
+.review {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding-top: 1rem;
+}
