--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,10 +36,47 @@ td {
   transform: scale(1.1); /* (10% zoom)*/
   z-index: 1;
 }
+.callToAction {
+  background-image: url('./components/callToAction.jpg');
+}
+
+.videoColumn {
+  overflow: scroll;
+  overflow-x: hidden;
+  height: 400px;
+  min-width: 200px;
+}
+.videoColumn::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+.videoColumn::-webkit-scrollbar-track {
+  border: 7px solid
+    linear-gradient(
+      45deg,
+      rgba(63, 149, 251, 1) 0%,
+      rgba(255, 255, 255, 1) 100%
+    );
+
+  box-shadow: insert 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+}
+
+/* Handle */
+.videoColumn::-webkit-scrollbar-thumb {
+  background: linear-gradient(
+    45deg,
+    rgba(61, 2, 84, 1) 8%,
+    rgba(158, 57, 179, 1) 39%,
+    rgba(255, 255, 255, 1) 78%
+  );
+  border-radius: 10px;
+}
+
 /*see ProductScreen.js*/
 .priceCard {
   opacity: 0.6;
-  margin-top: 2%;
+  margin-top: 3rem;
 
   position: fixed;
   top: 11%;
@@ -51,7 +88,7 @@ td {
 }
 /*see YouTubePlayer.js ////////////////////*/
 .youtube-player {
-  background-color: red;
+  /* background-color: red; */
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -77,7 +114,7 @@ td {
   text-align: right;
   font-size: 20px;
   z-index: -1;
-  background-color: greenyellow;
+  /* background-color: greenyellow; */
 
   color: rgb(7, 7, 7);
   opacity: 1;
@@ -90,9 +127,56 @@ td {
   cursor: pointer;
 }
 
-.review {
+.reviewBar {
+  display: flex;
+  flex-direction: row-reverse;
+  text-align: right;
+
+  padding: 0.2rem;
+  font-size: medium;
+}
+
+.reviewTop {
   display: flex;
   flex-direction: row;
+  padding-bottom: 0.5rem;
+  font-size: large;
+}
+
+.userReviewProfile {
+  color: #3a055b;
+  font-size: large;
+  display: flex;
+  flex-direction: column;
   justify-content: flex-start;
-  padding-top: 1rem;
+}
+
+.pagination {
+  font-size: small;
+}
+
+.carousel img {
+  height: 511.56px;
+  width: 1110px;
+}
+.carousel-caption {
+  position: absolute;
+  left: 70%;
+  top: 65%;
+}
+.buy-now-button {
+  position: absolute;
+  font-size: medium;
+
+  /* z-index: 1; */
+  left: 60%;
+  top: 45%;
+}
+.buy-link {
+  color: whitesmoke;
+}
+.buy-link:hover {
+  text-decoration: none;
+  color: whitesmoke;
+  font-weight: bold;
 }
